--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,143 @@
 
 
 
+*/
+.chat_container{
+position:fixed;
+width:1000px;
+bottom:-5px;
+height:350px;
+}
+.chat_box{
+	position:fixed;
+	right:20px;
+	bottom:0px;
+	width:250px;
+
+}
+.chat_body{
+	background:white;
+	height:400px;
+	padding:5px 0px;
+}
+
+.chat_head,.msg_head{
+	background:#f39c12;
+	color:white;
+	padding:15px;
+	font-weight:bold;
+
+	cursor:pointer;
+	border-radius:5px 5px 0px 0px;
+}
+
+.msg_box{
+	position:fixed;
+	bottom:-5px;
+	width:250px;
+	background:white;
+	border-radius:5px 5px 0px 0px;
+}
+
+.msg_head{
+	background:#3498db;
+}
+
+.msg_body{
+	background:white;
+	height:200px;
+	width:240px;
+	font-size:12px;
+	padding:15px;
+	overflow:auto;
+	overflow-x: hidden;
+}
+.msg_input{
+	width:100%;
+	border: 1px solid white;
+	border-top:1px solid #DDDDDD;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;
+}
+.recipient{
+	float:left;
+}
+.close{
+	float:right;
+	cursor:pointer;
+}
+.minimize{
+	float:right;
+	cursor:pointer;
+	padding-right:5px;
+
+}
+
+.user{
+	position:relative;
+	padding:10px 30px;
+}
+.user:hover{
+	background:#f8f8f8;
+	cursor:pointer;
+
+}
+.user:before{
+	content:'';
+	position:absolute;
+	background:#2ecc71;
+	height:10px;
+	width:10px;
+	left:10px;
+	top:15px;
+	border-radius:6px;
+}
+
+.msg_a{
+	position:relative;
+	background:#FDE4CE;
+	padding:10px;
+	min-height:10px;
+	margin-bottom:5px;
+	margin-right:10px;
+	border-radius:5px;
+}
+.msg_a:before{
+	content:"";
+	position:absolute;
+	width:0px;
+	height:0px;
+	border: 10px solid;
+	border-color: transparent #FDE4CE transparent transparent;
+	left:-20px;
+	top:7px;
+}
+
+
+.msg_b{
+	background:#EEF2E7;
+	padding:10px;
+	min-height:15px;
+	margin-bottom:5px;
+	position:relative;
+	margin-left:10px;
+	border-radius:5px;
+	word-wrap: break-word;
+}
+.msg_b:after{
+	content:"";
+	position:absolute;
+	width:0px;
+	height:0px;
+	border: 10px solid;
+	border-color: transparent transparent transparent #EEF2E7;
+	right:-20px;
+	top:7px;
+}
+
+
+
 body {
 
     color: #797979;
@@ -24,7 +161,7 @@ body {
 
     margin: 0px !important;
 
-    font-size:14px !important;    
+    font-size:14px !important;
 
 }
 
@@ -36,7 +173,7 @@ h1,h2,h3,h4,h5{
 
 label{
 
-    font-weight: 300;   
+    font-weight: 300;
 
 }
 
@@ -140,7 +277,7 @@ table tr th { color: #688a7e;}
 
 .login-img-body{
 
-  background: url('../img/bg-1.jpg') no-repeat center center fixed; 
+  background: url('../img/bg-1.jpg') no-repeat center center fixed;
 
   -webkit-background-size: cover;
 
@@ -154,7 +291,7 @@ table tr th { color: #688a7e;}
 
 .login-img2-body{
 
-  background: url('../img/bg-1.jpg') no-repeat center center fixed; 
+  background: url('../img/bg-1.jpg') no-repeat center center fixed;
 
   -webkit-background-size: cover;
 
@@ -168,7 +305,7 @@ table tr th { color: #688a7e;}
 
 .login-img3-body{
 
-  background: url('../img/bg-1.jpg') no-repeat center center fixed; 
+  background: url('../img/bg-1.jpg') no-repeat center center fixed;
 
   -webkit-background-size: cover;
 
@@ -188,7 +325,7 @@ table tr th { color: #688a7e;}
 
     margin: 200px auto 0;
 
-    background: #d5d7de;    
+    background: #d5d7de;
 
 }
 
@@ -262,7 +399,7 @@ table tr th { color: #688a7e;}
 
 .login-form .checkbox {
 
-    font-weight: normal;    
+    font-weight: normal;
 
     font-weight: 300;
 
@@ -298,7 +435,7 @@ table tr th { color: #688a7e;}
 
     font-size: 50px;
 
-    font-weight: 300;    
+    font-weight: 300;
 
 }
 
@@ -330,7 +467,7 @@ table tr th { color: #688a7e;}
 
 }
 
-.login-form input[type="text"], .login-form input[type="password"] {    
+.login-form input[type="text"], .login-form input[type="password"] {
 
     border: none;
 
@@ -338,7 +475,7 @@ table tr th { color: #688a7e;}
 
     font-size: 16px;
 
-    border-radius: 0; 
+    border-radius: 0;
 
 }
 
@@ -646,7 +783,7 @@ ul.sidebar-menu li{
 
     margin-right:10px;*/
 
-    
+
 
 }
 
@@ -734,7 +871,7 @@ ul.sidebar-menu li.active a, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:fo
 
     -ms-transition: all 0.3s ease;
 
-    transition: all 0.3s ease;        
+    transition: all 0.3s ease;
 
 }
 
@@ -746,7 +883,7 @@ ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
 
 /*ul.sidebar-menu li.active a,*/ ul.sidebar-menu .sub-menu li.active a{
 
-    border-bottom: 1px solid #d0d8df;   
+    border-bottom: 1px solid #d0d8df;
 
 }
 
@@ -802,13 +939,13 @@ ul.sidebar-menu li.active a i {
 
 }
 
-#sidebar ul > li > a .menu-arrow { 
+#sidebar ul > li > a .menu-arrow {
 
-    float: right;    
+    float: right;
 
     margin-right: 8px;
 
-    margin-top: 6px;    
+    margin-top: 6px;
 
 }
 
@@ -900,7 +1037,7 @@ ul.sidebar-menu li.active a i {
 
 .online-profile li a span i {
 
-    position: relative;    
+    position: relative;
 
     top: 10px;
 
@@ -922,7 +1059,7 @@ ul.sidebar-menu li.active a i {
 
 .chat-online-profile li a span i {
 
-    position: relative;    
+    position: relative;
 
     top: 10px;
 
@@ -1012,7 +1149,7 @@ ul.sidebar-menu li.active a i {
 
 
 
-.white-bg {    
+.white-bg {
 
     background: rgba(255,255,255,0.9);
 
@@ -1020,7 +1157,7 @@ ul.sidebar-menu li.active a i {
 
 }
 
-.dark-bg {    
+.dark-bg {
 
     background: rgba(54,66,74,1);
 
@@ -1128,7 +1265,7 @@ ul.top-menu > li > a {
 
     color: #fed189;
 
-    font-size: 18px;    
+    font-size: 18px;
 
     padding: 2px 6px;
 
@@ -1138,7 +1275,7 @@ ul.top-menu > li > a {
 
 
 
-ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {    
+ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 
     background: transparent !important;
 
@@ -1174,7 +1311,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 
 }
 
-.badge {    
+.badge {
 
     border-radius: 9px;
 
@@ -1218,7 +1355,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 
     padding: 0px;
 
-    margin: 0 0 0 10px;    
+    margin: 0 0 0 10px;
 
 }
 
@@ -1234,7 +1371,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 
     padding-left: 24px;
 
-    margin-top: 1px;    
+    margin-top: 1px;
 
 }
 
@@ -1262,15 +1399,15 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 
     background-color: white;
 
-    border-collapse: separate; 
+    border-collapse: separate;
 
-    border: 1px solid rgb(204, 204, 204); 
+    border: 1px solid rgb(204, 204, 204);
 
-    padding: 4px; 
+    padding: 4px;
 
-    box-sizing: content-box; 
+    box-sizing: content-box;
 
-    -webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset; 
+    -webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
 
     box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
 
@@ -1330,7 +1467,7 @@ div[data-role="editor-toolbar"] {
 
     margin: 0;
 
-    padding: 10px;    
+    padding: 10px;
 
 }
 
@@ -1504,7 +1641,7 @@ div[data-role="editor-toolbar"] {
 
     font-size: 11px;
 
-	
+
 
 }
 
@@ -1552,7 +1689,7 @@ div[data-role="editor-toolbar"] {
 
 .dropdown-menu.extended.logout > li.eborder-top {
 
-    border-top: 2px solid #688a7e !important;    
+    border-top: 2px solid #688a7e !important;
 
 }
 
@@ -1564,7 +1701,7 @@ div[data-role="editor-toolbar"] {
 
     width: 100%;
 
-    background: #688a7e;    
+    background: #688a7e;
 
 }
 
@@ -1680,7 +1817,7 @@ div[data-role="editor-toolbar"] {
 
 
 
-.top-nav ul.top-menu > li > a:hover, .top-nav ul.top-menu > li > a:focus {    
+.top-nav ul.top-menu > li > a:hover, .top-nav ul.top-menu > li > a:focus {
 
     background: #F1F2F7;
 
@@ -1758,7 +1895,7 @@ div[data-role="editor-toolbar"] {
 
   line-height: 22px;
 
-  opacity: 0.8;  
+  opacity: 0.8;
 
 }
 
@@ -1772,7 +1909,7 @@ div[data-role="editor-toolbar"] {
 
   height: 34px;
 
-  position: relative;  
+  position: relative;
 
   margin: 0 0 19px 0;
 
@@ -2098,7 +2235,7 @@ div[data-role="editor-toolbar"] {
 
   background: #00aced;
 
-  background-color : #00aced; 
+  background-color : #00aced;
 
 }
 
@@ -2108,7 +2245,7 @@ div[data-role="editor-toolbar"] {
 
   background: #4875b4;
 
-  background-color : #4875b4;  
+  background-color : #4875b4;
 
 }
 
@@ -2150,7 +2287,7 @@ div[data-role="editor-toolbar"] {
 
   -moz-border-radius: 0px;
 
-  border-radius: 0px;  
+  border-radius: 0px;
 
   position: relative;
 
@@ -2158,7 +2295,7 @@ div[data-role="editor-toolbar"] {
 
   -moz-box-shadow: inset 0 -2px 0 rgba(0,0,0,.05);
 
-  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.05);  
+  -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.05);
 
 }
 
@@ -2366,17 +2503,17 @@ div[data-role="editor-toolbar"] {
 
   border-bottom-color: #ccc!important;
 
-  border-left-color: #ccc!important;    
+  border-left-color: #ccc!important;
 
-  position: relative;  
+  position: relative;
 
 }
 
-.panel.panel-default {  
+.panel.panel-default {
 
   border-radius: 0px;
 
-  
+
 
   border-top: 1px solid #d4d4d4;
 
@@ -2386,7 +2523,7 @@ div[data-role="editor-toolbar"] {
 
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.1);
 
-  
+
 
 }
 
@@ -2394,7 +2531,7 @@ div[data-role="editor-toolbar"] {
 
 .panel.panel-default.panel-heading {
 
-  background: #97d3c5;   
+  background: #97d3c5;
 
 }
 
@@ -2548,9 +2685,9 @@ div[data-role="editor-toolbar"] {
 
 	margin-left: 60px;
 
-	position: relative; 
+	position: relative;
 
-	background: #fff; 
+	background: #fff;
 
 	border: 1px solid #ddd;
 
@@ -2564,53 +2701,53 @@ div[data-role="editor-toolbar"] {
 
 
 
-.chats .by-me .chat-content:after, .chats .by-me .chat-content:before { 
+.chats .by-me .chat-content:after, .chats .by-me .chat-content:before {
 
-	right: 100%; 
+	right: 100%;
 
-	border: solid transparent; 
+	border: solid transparent;
 
-	content: " "; 
+	content: " ";
 
-	height: 0; 
+	height: 0;
 
-	width: 0; 
+	width: 0;
 
-	position: absolute; 
+	position: absolute;
 
-	pointer-events: none; 
+	pointer-events: none;
 
-} 
-
-
-
-.chats .by-me .chat-content:after { 
-
-	border-color: rgba(255, 255, 255, 0); 
-
-	border-right-color: #fff; 
-
-	border-width: 10px; 
-
-	top: 30%; 
-
-	margin-top: -10px; 
-
-} 
+}
 
 
 
-.chats .by-me .chat-content:before { 
+.chats .by-me .chat-content:after {
 
-	border-color: rgba(238, 238, 238, 0); 
+	border-color: rgba(255, 255, 255, 0);
 
-	border-right-color: #ccc; 
+	border-right-color: #fff;
 
-	border-width: 11px; 
+	border-width: 10px;
 
-	top: 30%; 
+	top: 30%;
 
-	margin-top: -11px; 
+	margin-top: -10px;
+
+}
+
+
+
+.chats .by-me .chat-content:before {
+
+	border-color: rgba(238, 238, 238, 0);
+
+	border-right-color: #ccc;
+
+	border-width: 11px;
+
+	top: 30%;
+
+	margin-top: -11px;
 
 }
 
@@ -2646,9 +2783,9 @@ div[data-role="editor-toolbar"] {
 
 	margin-right: 60px;
 
-	position: relative; 
+	position: relative;
 
-	background: #fff; 
+	background: #fff;
 
 	border: 1px solid #ddd;
 
@@ -2662,53 +2799,53 @@ div[data-role="editor-toolbar"] {
 
 
 
-.chats .by-other .chat-content:after, .chats .by-other .chat-content:before { 
+.chats .by-other .chat-content:after, .chats .by-other .chat-content:before {
 
-	left: 100%; 
+	left: 100%;
 
-	border: solid transparent; 
+	border: solid transparent;
 
-	content: " "; 
+	content: " ";
 
-	height: 0; 
+	height: 0;
 
-	width: 0; 
+	width: 0;
 
-	position: absolute; 
+	position: absolute;
 
-	pointer-events: none; 
+	pointer-events: none;
 
-} 
-
-
-
-.chats .by-other .chat-content:after { 
-
-	border-color: rgba(255, 255, 255, 0); 
-
-	border-left-color: #fff; 
-
-	border-width: 10px; 
-
-	top: 30%; 
-
-	margin-top: -10px; 
-
-} 
+}
 
 
 
-.chats .by-other .chat-content:before { 
+.chats .by-other .chat-content:after {
 
-	border-color: rgba(238, 238, 238, 0); 
+	border-color: rgba(255, 255, 255, 0);
 
-	border-left-color: #ccc; 
+	border-left-color: #fff;
 
-	border-width: 11px; 
+	border-width: 10px;
 
-	top: 30%; 
+	top: 30%;
 
-	margin-top: -11px; 
+	margin-top: -10px;
+
+}
+
+
+
+.chats .by-other .chat-content:before {
+
+	border-color: rgba(238, 238, 238, 0);
+
+	border-left-color: #ccc;
+
+	border-width: 11px;
+
+	top: 30%;
+
+	margin-top: -11px;
 
 }
 
@@ -3086,7 +3223,7 @@ div[data-role="editor-toolbar"] {
 
   background: -o-linear-gradient(top, #f8f8f8, #f2f2f2);
 
-  background: linear-gradient(top, #f8f8f8, #f2f2f2);	
+  background: linear-gradient(top, #f8f8f8, #f2f2f2);
 
   border-top-right-radius: 3px;
 
@@ -3190,7 +3327,7 @@ div[data-role="editor-toolbar"] {
 
   background: -o-linear-gradient(top, #f8f8f8, #f2f2f2);
 
-  background: linear-gradient(top, #f8f8f8, #f2f2f2);	
+  background: linear-gradient(top, #f8f8f8, #f2f2f2);
 
   border-bottom-right-radius: 3px;
 
@@ -3690,7 +3827,7 @@ div[data-role="editor-toolbar"] {
 
     width: 30%;
 
-    padding: 25px 15px;    
+    padding: 25px 15px;
 
 }
 
@@ -3986,7 +4123,7 @@ div[data-role="editor-toolbar"] {
 
 .revenue-head {
 
-    background: #688a7e;    
+    background: #688a7e;
 
     color: #fff;
 
@@ -4008,7 +4145,7 @@ div[data-role="editor-toolbar"] {
 
     padding: 16px;
 
-    font-weight: 300;    
+    font-weight: 300;
 
 }
 
@@ -4264,7 +4401,7 @@ div[data-role="editor-toolbar"] {
 
 .flat-carousal {
 
-    background: #00a0df;    
+    background: #00a0df;
 
     padding: 10px;
 
@@ -4572,7 +4709,7 @@ ul.ft-link li a i {
 
 .post-highlight.yellow {
 
-    background: #FCB322;    
+    background: #FCB322;
 
 }
 
@@ -4580,7 +4717,7 @@ ul.ft-link li a i {
 
 .post-highlight.terques {
 
-    background: #688a7e;    
+    background: #688a7e;
 
 }
 
@@ -4848,11 +4985,11 @@ ul.ft-link li a i {
 
 
 
-.profile-widget {    
+.profile-widget {
 
     color: #fff;
 
-    text-align: center;    
+    text-align: center;
 
 }
 
@@ -4862,7 +4999,7 @@ ul.ft-link li a i {
 
 .profile-widget-img{
 
-    background: url('../img/backgrounds/bg-11-small.jpg') no-repeat !important;    
+    background: url('../img/backgrounds/bg-11-small.jpg') no-repeat !important;
 
 }
 
@@ -4938,7 +5075,7 @@ ul.ft-link li a i {
 
     width: 15%;
 
-    display: inline-block;            
+    display: inline-block;
 
 }
 
@@ -4970,7 +5107,7 @@ ul.ft-link li a i {
 
     background: rgba(0,0,0,0.1);
 
-    color: #757575;    
+    color: #757575;
 
     font-weight: 300;
 
@@ -5040,7 +5177,7 @@ ul.ft-link li a i {
 
 
 
-	
+
 
 }
 
@@ -5102,7 +5239,7 @@ ul.ft-link li a i {
 
     border-radius: 50%;
 
-    -webkit-border-radius: 50%;    
+    -webkit-border-radius: 50%;
 
     border: 2px solid rgba(0,112,255,0.4);
 
@@ -5296,7 +5433,7 @@ ul.ft-link li a i {
 
 .weather-bg {
 
-    background: #34AADC;    
+    background: #34AADC;
 
     color: #fff;
 
@@ -5340,7 +5477,7 @@ ul.ft-link li a i {
 
     padding: 15px 0;
 
-    color: #ffffff;    
+    color: #ffffff;
 
 }
 
@@ -5400,11 +5537,11 @@ ul.ft-link li a i {
 
     text-align: center;
 
-	
 
-   
 
-	
+
+
+
 
     display: inline-block;
 
@@ -5428,7 +5565,7 @@ ul.ft-link li a i {
 
 
 
-.weather-days{    
+.weather-days{
 
     color: #ffffff;
 
@@ -5536,7 +5673,7 @@ ul.ft-link li a i {
 
 .weather-bg-img {
 
-    background: url(../img/backgrounds/bg-14-small.jpg) no-repeat center center;    
+    background: url(../img/backgrounds/bg-14-small.jpg) no-repeat center center;
 
     color: #fff;
 
@@ -5748,7 +5885,7 @@ ul.ft-link li a i {
 
     width: 20%;
 
-    background: #e5e8ef;    
+    background: #e5e8ef;
 
 }
 
@@ -5756,7 +5893,7 @@ ul.ft-link li a i {
 
     width: 25%;
 
-    background: #fff;    
+    background: #fff;
 
 }
 
@@ -5764,7 +5901,7 @@ ul.ft-link li a i {
 
     width: 65%;
 
-    background: #f5f5f5;    
+    background: #f5f5f5;
 
 }
 
@@ -5784,7 +5921,7 @@ ul.ft-link li a i {
 
 .inbox-wrapper .inbox-left .user-head {
 
-    background: rgba(0,0,0,0.2);    
+    background: rgba(0,0,0,0.2);
 
     padding: 10px;
 
@@ -5796,7 +5933,7 @@ ul.ft-link li a i {
 
 .inbox-wrapper .inbox-middle .inbox-mail {
 
-    background: #688a7e;        
+    background: #688a7e;
 
     padding: 10px;
 
@@ -5886,7 +6023,7 @@ a.mail-dropdown {
 
 .inbox-body {
 
-    padding: 20px;    
+    padding: 20px;
 
 }
 
@@ -5956,7 +6093,7 @@ ul.mail-nav li {
 
 ul.mail-nav li a  {
 
-    color: #6a6a6a;     
+    color: #6a6a6a;
 
     width: 100%;
 
@@ -5976,7 +6113,7 @@ ul.mail-nav .mail-info{
 
 ul.mail-nav p{
 
-    font-size: 12px;   
+    font-size: 12px;
 
 }
 
@@ -6168,7 +6305,7 @@ ul.labels-info li a i {
 
     color: #fff;
 
-    border-bottom: 1px solid #D7D7D7;    
+    border-bottom: 1px solid #D7D7D7;
 
     min-height: 80px;
 
@@ -6344,7 +6481,7 @@ ul.inbox-pagination li {
 
     border-radius: 0px !important;
 
-    -webkit-border-radius: 0px !important;    
+    -webkit-border-radius: 0px !important;
 
 }
 
@@ -6476,7 +6613,7 @@ ul.inbox-pagination li {
 
   width:350px;
 
-  height:200px;    
+  height:200px;
 
   margin:100px auto;
 
@@ -6486,7 +6623,7 @@ ul.inbox-pagination li {
 
 
 
-.text-404{    
+.text-404{
 
   font-size:138px;
 
@@ -6508,7 +6645,7 @@ ul.inbox-pagination li {
 
   -webkit-background-clip: text;
 
-  color:transparent;  
+  color:transparent;
 
   text-align:center;
 
@@ -6592,7 +6729,7 @@ ul.inbox-pagination li {
 
     background: #688a7e;
 
-    color: #fff;    
+    color: #fff;
 
     padding: 30px;
 
@@ -6820,7 +6957,7 @@ ul.inbox-pagination li {
 
     padding: 40px 110px;
 
-    
+
 
     font-size: 16px;
 
@@ -7712,7 +7849,7 @@ ul.amounts li {
 
 .tab-bg-primary {
 
-    background: #688a7e;    
+    background: #688a7e;
 
     border-bottom: none;
 
@@ -7722,9 +7859,9 @@ ul.amounts li {
 
 .tab-bg-info {
 
-    background: #324c57; 
+    background: #324c57;
 
-	
+
 
     border-bottom: none;
 
@@ -9336,7 +9473,7 @@ table.sliders tr td {
 
     margin-top: 15px;
 
-    width: 100%;    
+    width: 100%;
 
 }
 
@@ -9416,7 +9553,7 @@ table.sliders tr td {
 
 .p-thumb img {
 
-    width: 50px;    
+    width: 50px;
 
     border-radius: 3px;
 
@@ -9869,4 +10006,3 @@ span.customSelect.changed {
     background:url(../img/customSelect-arrow.gif) no-repeat center right;
 
 }
-
